--- a/style.css
+++ b/style.css
@@ -8,8 +8,18 @@
 
 
 
+.card:not(:has(img)):not(:has(h3)) p {
+    font-size: 1.25rem;
+    line-height: 1.4;
+}
 
+.card:not(:has(img)) h3 {
+    font-size: 1.6rem;
+}
 
+.card:has(img) {
+    padding: 0; 
+}
 
 
 
