--- a/src/components/ScrollingContainer.astro
+++ b/src/components/ScrollingContainer.astro
@@ -14,6 +14,11 @@ const { cardContent } = Astro.props;
 </ul>
 
 <style>
+  .full-width {
+    scroll-snap-type: x mandatory;
+    scroll-snap-align: center;
+    scroll-snap-stop: always;
+  }
   ul {
     list-style: none;
     padding: 1.5rem;
@@ -25,7 +30,5 @@ const { cardContent } = Astro.props;
     background: var(--bg-card, var(--gray));
     border-radius: 10px;
     padding: 2.5rem;
-  }
-  .full-width {
   }
 </style>
