--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 section {
     max-width: 1200px;
     padding-inline: 1rem;
-
     grid-template-rows: 1fr auto;
     grid-template-columns: 2.5fr 1.5fr 1fr;
     gap: 1.5rlh;
@@ -20,8 +19,8 @@ display: grid;
     }
 
     .content {
-        display: subgrid;
         grid-column: 2/4;
+        grid-row: 1/2;
 
         >*+* {
             margin-top: .75rlh;
@@ -29,9 +28,11 @@ display: grid;
     }
 
     figure {
-display: subgrid;
-grid-column: 1/2;
-grid-row: 1/2;
+display: grid;
+grid-column: 1/4;
+grid-row: 1/3;
+grid-template-columns: subgrid;
+grid-template-rows: subgrid;
 }
     }
 
@@ -39,6 +40,8 @@ grid-row: 1/2;
         align-self: stretch;
         object-fit: cover;
         aspect-ratio: 1.35;
+        grid-column: 1/2;
+        grid-row: 1/3;
     }
 
     figcaption {
@@ -47,5 +50,7 @@ grid-row: 1/2;
         color: var(--gray-900);
         background: var(--gray-100);
         padding: .4rlh .6rlh;
+         grid-column: 2/3;
+        grid-row: 2/3;
     }
 
