nesting to make it responsive

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ section {
     gap: 1.5rlh;
     color: var(--gray-900);
 
-    @media (width > 880px) {
+    @media (width > 600px) {
 display: grid; 
     }
 
@@ -28,11 +28,13 @@ display: grid;
     }
 
     figure {
-display: grid;
 grid-column: 1/4;
 grid-row: 1/3;
 grid-template-columns: subgrid;
 grid-template-rows: subgrid;
+    @media (width > 600px) {
+display: grid; 
+    }
 }
     }
 
